fix overflow .page-main

--- a/web/css/_layout.less
+++ b/web/css/_layout.less
@@ -12,6 +12,7 @@
   .display(block);
   .float(left);
   width: 100%;
+  overflow: hidden; // fix ipad outside space
 }
 
 // 1column
